# ITO

./: .gitignore  Cargo.toml  LICENSE  README.md  installer.iss
.github/workflows/: release.yml
ito-gui/: package-lock.json  package.json
ito-gui/src/: index.html  main.js  styles.css
ito-gui/src-tauri/: Cargo.toml  tauri.conf.json
ito-gui/src-tauri/src/: lib.rs  main.rs
src/: cas.rs  diff.rs  engines.rs  ignore.rs  lib.rs  linter.rs  main.rs  models.rs  parsers.rs  updater.rs
src/parsers/: eagle.rs  edif.rs  excel_bom.rs  kicad.rs  proteus.rs
