[package]
name = "ito"
version = "0.1.0"
edition = "2021"
authors = ["Vasloth Team"]
description = "Semantic version control engine for hardware engineering (BOM, CAD, and Firmware)"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
toml = "0.8"
sha2 = "0.10"
zip = "0.6"
